# uuv_ais_manager

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_LOG.md  Dockerfile  README.md
.claude/memory/: MEMORY.md  config_reference.md  design_decisions.md  feedback_conventions.md  project_architecture.md
.devcontainer/: Dockerfile  devcontainer.json
config/: ais_config.ini  ais_config.json  suggested_ais_config.json
notes/: DEVELOPMENT_LOG.md
src/: AisDevice.cpp  AisDevice.hpp  AisManager.cpp  AisManager.hpp  AisParser.hpp  AisReceiver.cpp  AisReceiver.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  MqttClient.cpp  MqttClient.hpp  NmeaParser.cpp  NmeaParser.hpp  Transport.cpp  Transport.hpp  main.cpp
tests/: HOW_TO_TEST.md  ais_simulator.py  conftest.py  helpers.py  pytest.ini  requirements_test.txt  test_ais.py  test_config.py  test_gga.py  test_receive.py  test_status.py  test_transport.py
